force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>This Object Specify Appointments details</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>Appointment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>