force-app/main/default/objects/Appointment__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Date of the Appointment</description>
    <inlineHelpText>Date of the Appointment</inlineHelpText>
    <label>Appointment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>