force-app/main/default/objects/Appointment__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <description>Email of the patient of the Appointment</description>
    <inlineHelpText>Email of the patient of the Appointment</inlineHelpText>
    <label>Patient Email</label>
    <type>Email</type>
</CustomField>