force-app/main/default/objects/Appointment__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Physician__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>