force-app/main/default/objects/Appointment__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to Specialization of the appointment</description>
    <inlineHelpText>Specialization of the Physician</inlineHelpText>
    <label>Specialization</label>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>