force-app/main/default/objects/Appointment__c/fields/Specialization_Name__c.field-meta.xml
<CustomField>
    <fullName>Specialization_Name__c</fullName>
    <formula>Specialization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialization Name</label>
    <type>Text</type>
</CustomField>