force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Appointment_Time__c</columns>
    <columns>Patient__c</columns>
    <columns>Fee__c</columns>
    <columns>Physician__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>